# holoport-manager

./: .gitignore  README.md  Vagrantfile
src/: default.nix
src/examples/django/: db.sqlite3  requirements.nix  setup.cfg
src/examples/django/src/holoport_manager_api/support/: views.py
src/holoport-manager/: default.nix
src/holoport-manager-api/: app.py  default.nix  requirements.nix
src/holoport_manager/: db.sqlite3  requirements.nix  requirements.txt  result  setup.cfg  setup.nix
src/holoport_manager/src/holoport_manager_api/: manage.py  settings.py  urls.py  wsgi.py
src/holoport_manager/src/holoport_manager_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/holoport_manager/src/holoport_manager_api/support/: limiter.py  models.py  serializers.py  views.py
src/holoport_manager/src/holoport_manager_api/support/migrations/: 0001_initial.py  0002_supportsession_uuid.py
src/holoport_manager_api/: manage.py
src/holoport_manager_api/holoport_manager_api/: settings.py  urls.py  wsgi.py
src/holoport_manager_api/support/: views.py
