[metadata]
name = holoport_manager_api
version = 1.0
description = Holoport Manager API
author = Sam Rose
author_email = sam.rose@holo.host
url = https://github.com/holo-host/holoport-manager
license = None

[options]
install_requires =
    django
    djangorestframework
    djangorestframework-jwt
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    manage = holoport_manager_api.manage:main

[bdist_wheel]
universal = 1
